<resources>
    <string name="app_name">GuestLogix</string>
    <string name="press_once_again_to_exit">Press once again to exit from app</string>
    <string name="no_data_available">No data available.</string>
    <string name="retry">Retry</string>
    <string name="no_internet_connection_please_try_later">No internet connection. Please try later.</string>
    <string name="episode">Episode:</string>
    <string name="status">Status</string>
    <string name="species">Species</string>
    <string name="origin">Origin</string>
    <string name="last_location">Last Location</string>
    <string name="gender">Gender</string>
    <string name="all">All</string>
    <string name="dead">Dead</string>
    <string name="alive">Alive</string>
    <string name="kill">Kill</string>
    <string name="episodes">Episodes</string>
    <string name="image_loading_failed">Image Loading Failed.</string>
    <string name="created_string_format">id: %d - created %s</string>
    <string name="no_leave">Don\'t Kill</string>
    <string name="yes_kill">Kill</string>

</resources>
