<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

        <RelativeLayout
            android:id="@+id/relBody"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/linTabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtAll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tab_selector"
                    android:gravity="center"
                    android:padding="@dimen/twelve_dp"
                    android:text="@string/all"
                    android:textColor="@color/selector_txt_color"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/one_dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGrey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtAlive"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tab_selector"
                    android:gravity="center"
                    android:padding="@dimen/twelve_dp"
                    android:text="@string/alive"
                    android:textColor="@color/selector_txt_color"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/one_dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGrey" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtDead"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/tab_selector"
                    android:gravity="center"
                    android:padding="@dimen/twelve_dp"
                    android:text="@string/dead"
                    android:textColor="@color/selector_txt_color"
                    android:textSize="@dimen/sixteen_sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linTabs"
                android:layout_marginStart="@dimen/three_dp"
                android:layout_marginEnd="@dimen/three_dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/fifteen_dp"
            android:text="@string/no_data_available"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sixteen_sp"
            android:visibility="gone" />

    </RelativeLayout>
