<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:overScrollMode="never"
        android:scrollbars="none"
        android:visibility="visible">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCharacter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/five_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardMaxElevation="@dimen/two_dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/threehundred_dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtLoadingFailed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/ten_dp"
                    android:text="@string/image_loading_failed"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/fifteen_sp" />

                <ProgressBar
                    android:id="@+id/imgProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgCharacter"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@color/semiTransparent"
                    android:orientation="vertical"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCharacterName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/nineteen_sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtCreated"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/fourteen_sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorDarkGrey"
                android:orientation="vertical"
                android:padding="@dimen/seven_dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:text="@string/status"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/fourteen_sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtStatus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/sixteen_sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/seperator_height_small"
                    android:layout_marginTop="@dimen/two_dp"
                    android:layout_marginBottom="@dimen/two_dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:text="@string/species"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/fourteen_sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtSpecies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/sixteen_sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/seperator_height_small"
                    android:layout_marginTop="@dimen/two_dp"
                    android:layout_marginBottom="@dimen/two_dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:text="@string/gender"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/fourteen_sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/sixteen_sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/seperator_height_small"
                    android:layout_marginTop="@dimen/two_dp"
                    android:layout_marginBottom="@dimen/two_dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/origin"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/fourteen_sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtOrigin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorYellow"
                        android:layout_gravity="end|center_vertical"
                        android:gravity="end|center_vertical"
                        android:textSize="@dimen/sixteen_sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/seperator_height_small"
                    android:layout_marginTop="@dimen/two_dp"
                    android:layout_marginBottom="@dimen/two_dp"
                    android:background="@color/colorWhite" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/ten_dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_location"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start|center_vertical"
                        android:textSize="@dimen/fourteen_sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtLastLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:gravity="end|center_vertical"
                        android:textColor="@color/colorYellow"
                        android:textSize="@dimen/sixteen_sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNoData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="@dimen/fifteen_dp"
        android:text="@string/no_data_available"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/sixteen_sp"
        android:visibility="gone" />

</RelativeLayout>
